Changed prisma schema and implemented owner routes
